// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <p
    className="interactions"
  >
     Please use one of this codes:
    <span>
      THB
      , 
    </span>
    <span>
      USD
      , 
    </span>
    <span>
      AUD
      , 
    </span>
    <span>
      HKD
      , 
    </span>
    <span>
      CAD
      , 
    </span>
    <span>
      NZD
      , 
    </span>
    <span>
      SGD
      , 
    </span>
    <span>
      EUR
      , 
    </span>
    <span>
      HUF
      , 
    </span>
    <span>
      CHF
      , 
    </span>
    <span>
      GBP
      , 
    </span>
    <span>
      UAH
      , 
    </span>
    <span>
      JPY
      , 
    </span>
    <span>
      CZK
      , 
    </span>
    <span>
      DKK
      , 
    </span>
    <span>
      ISK
      , 
    </span>
    <span>
      NOK
      , 
    </span>
    <span>
      SEK
      , 
    </span>
    <span>
      HRK
      , 
    </span>
    <span>
      RON
      , 
    </span>
    <span>
      BGN
      , 
    </span>
    <span>
      TRY
      , 
    </span>
    <span>
      ILS
      , 
    </span>
    <span>
      CLP
      , 
    </span>
    <span>
      MXN
      , 
    </span>
    <span>
      PHP
      , 
    </span>
    <span>
      ZAR
      , 
    </span>
    <span>
      BRL
      , 
    </span>
    <span>
      MYR
      , 
    </span>
    <span>
      RUB
      , 
    </span>
    <span>
      IDR
      , 
    </span>
    <span>
      INR
      , 
    </span>
    <span>
      KRW
      , 
    </span>
    <span>
      CNY
      , 
    </span>
    <span>
      XDR
      , 
    </span>
  </p>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        type="submit"
      >
        Add
      </button>
      <button
        className="interactions"
        onClick={[Function]}
        type="button"
      >
        Remove All
      </button>
    </form>
  </div>
  <div
    className="table"
  >
    <div
      className="table-header"
    >
      <span
        style={
          Object {
            "width": "40%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={undefined}
          type="button"
        >
          Currency
        </button>
      </span>
      <span
        style={
          Object {
            "width": "30%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={undefined}
          type="button"
        >
          Exchange rate
        </button>
      </span>
      <span
        style={
          Object {
            "width": "20%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={undefined}
          type="button"
        >
          Code
        </button>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={undefined}
          type="button"
        >
          Date
        </button>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className=""
  onClick={undefined}
  type="button"
>
  Give Me More
</button>
`;

exports[`Search has a valid snapshot 1`] = `
<form
  onSubmit={undefined}
>
  <input
    onChange={undefined}
    type="text"
    value={undefined}
  />
  <button
    type="submit"
  >
    Search
  </button>
  <button
    className="interactions"
    onClick={[Function]}
    type="button"
  >
    Remove All
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={undefined}
        type="button"
      >
        Currency
      </button>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={undefined}
        type="button"
      >
        Exchange rate
      </button>
    </span>
    <span
      style={
        Object {
          "width": "20%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={undefined}
        type="button"
      >
        Code
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={undefined}
        type="button"
      >
        Date
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    />
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
       PLN
    </span>
    <span
      style={
        Object {
          "width": "20%",
        }
      }
    >
      
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    />
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="interactions"
        onClick={[Function]}
        type="button"
      >
        Remove
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
       PLN
    </span>
    <span
      style={
        Object {
          "width": "20%",
        }
      }
    >
      
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    />
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="interactions"
        onClick={[Function]}
        type="button"
      >
        Remove
      </button>
    </span>
  </div>
</div>
`;
